changed db to sdp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=employees
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=sdp
 spring.datasource.username=sa
 spring.datasource.password=Secret1234
 spring.jpa.show-sql=true
