added endpoints and responses

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,25 @@ version: "3.2"
 services:
   mssql:
     image: 'microsoft/mssql-server-linux'
+    build: ./src/main/mssql
     ports:
       - '1433:1433'
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=Secret1234
+    volumes:
+      - database-data:/var/opt/mssql
+  api:
+    build: ./src/main/docker
+    ports:
+      - '8080:8080'
+    depends_on:
+      - mssql
+    restart: on-failure
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:sqlserver://mssql:1433;databaseName=sdp
+      - SPRING_DATASOURCE_USERNAME=sa
+      - SPRING_DATASOURCE_PASSWORD=Secret1234
+
+volumes:
+  database-data:
